--- a/aula04/exercício3/form3.html
+++ b/aula04/exercício3/form3.html
@@ -9,6 +9,7 @@
     <form action="form3.php" method="post">
         <p>Login: <input type="text" name="cxlogin" required id=""></p>
         <p>Senha: <input type="password" name="cxsenha" required id=""></p>
+        <input type="submit" value="enviar">
     </form>
 </body>
 </html>
